feat: add tag controller and documentation
