# build/config/swagger.yaml
@@ -77,7 +77,7 @@ paths:
                   required: true
             example:
               login: "john@gmail.com"
-              username: "john"              
+              username: "john"
               sex: "male"
               birth: "1990/01/01"
               height: 183
@@ -105,7 +105,7 @@ paths:
                 example:
                   message: "User Registered, confirmation code sent to email"
                   user: "john@gmail.com"
-  # Get Confirmation code                
+  # Get Confirmation code
   /auth/get-code:
     post:
       summary: Get confirmation code
@@ -171,27 +171,27 @@ paths:
                   token:
                     type: string
                   _id:
-                    type: string  
+                    type: string
                   email:
-                    type: string  
+                    type: string
                   username:
-                    type: string  
+                    type: string
                   sex:
                     type: string
                   birth:
-                    type: string                  
+                    type: string
                   height:
-                    type: number                    
+                    type: number
                   is_ft_heigth:
-                    type: boolean                    
+                    type: boolean
                   body_type:
-                    type: string                    
+                    type: string
                   physical_activities:
-                    type: string                    
+                    type: string
                   weight:
-                    type: number                    
+                    type: number
                   is_ft_weight:
-                    type: boolean   
+                    type: boolean
                   protein:
                     type: number
                   calories:
@@ -201,7 +201,7 @@ paths:
                   fat:
                     type: number
                   customGoal:
-                    type: boolean                   
+                    type: boolean
                 example:
                   message: "User Logged in"
                   token: "eyJhbGciOiJIU1NzA0MzQyOCwiZX-E7VSXu7C2ZcT-uyCyjzXp2FiNrs_xCKwV8"
@@ -220,7 +220,7 @@ paths:
                   calories: 2000
                   carbs: 800
                   customGoal: true
-  # Login with google          
+  # Login with google
   /auth/google-login:
     post:
       summary: Login with Google
@@ -250,27 +250,27 @@ paths:
                   token:
                     type: string
                   _id:
-                    type: string  
+                    type: string
                   email:
-                    type: string  
+                    type: string
                   username:
-                    type: string  
+                    type: string
                   sex:
                     type: string
                   birth:
-                    type: string                  
+                    type: string
                   height:
-                    type: number                    
+                    type: number
                   is_ft_heigth:
-                    type: boolean                    
+                    type: boolean
                   body_type:
-                    type: string                    
+                    type: string
                   physical_activities:
-                    type: string                    
+                    type: string
                   weight:
-                    type: number                    
+                    type: number
                   is_ft_weight:
-                    type: boolean   
+                    type: boolean
                   protein:
                     type: number
                     required: true
@@ -299,12 +299,12 @@ paths:
                   body_type: "Athletic"
                   physical_activities: "Swimming"
                   weight: 95
-                  is_ft_weight: true                  
+                  is_ft_weight: true
                   protein: 200
                   calories: 2000
                   carbs: 800
                   customGoal: true
-  # Register user with google                
+  # Register user with google
   /auth/google-register:
     post:
       summary: Register with Google
@@ -360,7 +360,7 @@ paths:
                   required: true
                 customGoal:
                   type: boolean
-                  required: true  
+                  required: true
             example:
               login: "john@gmail.com"
               username: "john"
@@ -389,27 +389,27 @@ paths:
                   token:
                     type: string
                   _id:
-                    type: string  
+                    type: string
                   email:
-                    type: string  
+                    type: string
                   username:
-                    type: string  
+                    type: string
                   sex:
                     type: string
                   birth:
-                    type: string                  
+                    type: string
                   height:
-                    type: number                    
+                    type: number
                   is_ft_heigth:
-                    type: boolean                    
+                    type: boolean
                   body_type:
-                    type: string                    
+                    type: string
                   physical_activities:
-                    type: string                    
+                    type: string
                   weight:
-                    type: number                    
+                    type: number
                   is_ft_weight:
-                    type: boolean   
+                    type: boolean
                   protein:
                     type: number
                     required: true
@@ -443,7 +443,7 @@ paths:
                   calories: 2000
                   carbs: 800
                   customGoal: true
-# Login with apple
+  # Login with apple
   /auth/apple-login:
     post:
       summary: Create new user and login with Apple
@@ -473,27 +473,27 @@ paths:
                   token:
                     type: string
                   _id:
-                    type: string  
+                    type: string
                   email:
-                    type: string  
+                    type: string
                   username:
-                    type: string  
+                    type: string
                   sex:
                     type: string
                   birth:
-                    type: string                  
+                    type: string
                   height:
-                    type: number                    
+                    type: number
                   is_ft_heigth:
-                    type: boolean                    
+                    type: boolean
                   body_type:
-                    type: string                    
+                    type: string
                   physical_activities:
-                    type: string                    
+                    type: string
                   weight:
-                    type: number                    
+                    type: number
                   is_ft_weight:
-                    type: boolean   
+                    type: boolean
                   protein:
                     type: number
                     required: true
@@ -508,7 +508,7 @@ paths:
                     required: true
                   customGoal:
                     type: boolean
-                    required: true  
+                    required: true
                 example:
                   message: "User logged in"
                   token: "mMwZDMwZWYzZDkzOGVlNmEiLCJuYW1lIj"
@@ -527,7 +527,7 @@ paths:
                   calories: 2000
                   carbs: 800
                   customGoal: true
-# Register user with apple
+  # Register user with apple
   /auth/apple-register:
     post:
       summary: Create new user and login with Apple
@@ -586,7 +586,7 @@ paths:
                   required: true
                 customGoal:
                   type: boolean
-                  required: true  
+                  required: true
             example:
               login: "john@gmail.com"
               appleToken: "dsjkfhskjhfljkhwhSDFSDFsdfsd"
@@ -616,27 +616,27 @@ paths:
                   token:
                     type: string
                   _id:
-                    type: string  
+                    type: string
                   email:
-                    type: string  
+                    type: string
                   username:
-                    type: string  
+                    type: string
                   sex:
                     type: string
                   birth:
-                    type: string                  
+                    type: string
                   height:
-                    type: number                    
+                    type: number
                   is_ft_heigth:
-                    type: boolean                    
+                    type: boolean
                   body_type:
-                    type: string                    
+                    type: string
                   physical_activities:
-                    type: string                    
+                    type: string
                   weight:
-                    type: number                    
+                    type: number
                   is_ft_weight:
-                    type: boolean   
+                    type: boolean
                   protein:
                     type: number
                     required: true
@@ -728,7 +728,7 @@ paths:
                   required: true
                 customGoal:
                   type: boolean
-                  required: true  
+                  required: true
             example:
               login: "john@gmail.com"
               username: "john"
@@ -753,7 +753,7 @@ paths:
                 type: object
                 properties:
                   message:
-                    type: string                   
+                    type: string
                   email:
                     type: string
                   username:
@@ -783,7 +783,7 @@ paths:
                   fat:
                     type: number
                   customGoal:
-                    type: boolean  
+                    type: boolean
                 example:
                   message: "User updated"
                   email: "john@gmail.com"
@@ -799,7 +799,7 @@ paths:
                   protein: 200
                   calories: 2000
                   carbs: 800
-                  customGoal: true               
+                  customGoal: true
   /auth/deactivate-account:
     post:
       summary: Delete account
@@ -864,3 +864,262 @@ paths:
                     type: string
                 example:
                   message: "Account deactivated"
+
+  /tag/create:
+    post:
+      summary: Create a new tag
+      tags:
+        - Tag
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                identifier:
+                  type: string
+                  example: blue
+                tagName:
+                  type: string
+                  example: Tag
+                isSetTag:
+                  type: boolean
+                  example: true
+                userId:
+                  type: string
+                  example: 64509b14478f54561502b3a7
+              required:
+                - identifier
+                - tagName
+                - isSetTag
+                - userId
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  _id:
+                    type: string
+                    example: "6450aa72af0f84eeed688ad0"
+                  identifier:
+                    type: string
+                    example: red
+                  tagName:
+                    type: string
+                    example: Tag
+                  isSetTag:
+                    type: boolean
+                    example: true
+                  userId:
+                    type: string
+                    example: 64509b14478f54561502b3a7
+                  createdAt:
+                    type: string
+                    format: date-time
+                    example: "2023-05-02T06:15:14.905Z"
+                  __v:
+                    type: integer
+                    example: 0
+              required:
+                - _id
+                - identifier
+                - tagName
+                - isSetTag
+                - userId
+                - createdAt
+                - __v
+        "401":
+          description: Unauthorized
+
+  /tag/get:
+    post:
+      summary: Get all tags for a user
+      tags:
+        - Tag
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                userId:
+                  type: string
+                  example: "64509b14478f54561502b3a7"
+              required:
+                - userId
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  type: object
+                  properties:
+                    identifire:
+                      type: string
+                      example: gray
+                    tagName:
+                      type: string
+                      example: blue 001
+                    isSetTag:
+                      type: boolean
+                      example: true
+                    userId:
+                      type: string
+                      example: "64509b14478f54561502b3a7"
+                    _id:
+                      type: string
+                      example: "6450ad73a86a24b91c5a6f1c"
+                    createdAt:
+                      type: string
+                      format: date-time
+                      example: "2023-05-02T06:28:03.943Z"
+                    __v:
+                      type: integer
+                      example: 0
+              required:
+                - identifire
+                - tagName
+                - isSetTag
+                - userId
+                - _id
+                - createdAt
+                - __v
+        "401":
+          description: Unauthorized
+
+  /tag/edit:
+    patch:
+      summary: Edit a tag
+      tags:
+        - Tag
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                identifire:
+                  type: string
+                  example: "bambucha"
+                tagName:
+                  type: string
+                  example: "blue 001"
+                isSetTag:
+                  type: boolean
+                  example: true
+                userId:
+                  type: string
+                  example: "64509b14478f54561502b3a7"
+                tagId:
+                  type: string
+                  example: "6450aa7caf0f84eeed688ad2"
+              required:
+                - identifire
+                - tagName
+                - isSetTag
+                - userId
+                - tagId
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Tag edited"
+                  Tag:
+                    type: object
+                    properties:
+                      _id:
+                        type: string
+                        example: "6450aa7caf0f84eeed688ad2"
+                      identifire:
+                        type: string
+                        example: "bambucha"
+                      tagName:
+                        type: string
+                        example: "blue 001"
+                      isSetTag:
+                        type: boolean
+                        example: true
+                      userId:
+                        type: string
+                        example: "64509b14478f54561502b3a7"
+                      createdAt:
+                        type: string
+                        format: date-time
+                        example: "2023-05-02T06:15:24.052Z"
+                      __v:
+                        type: integer
+                        example: 0
+                    required:
+                      - _id
+                      - identifire
+                      - tagName
+                      - isSetTag
+                      - userId
+                      - createdAt
+                      - __v
+        "401":
+          description: Unauthorized
+        "404":
+          description: Tag not found
+
+  /tag/delete:
+    delete:
+      summary: Delete a tag
+      tags:
+        - Tag
+      security:
+        - bearerAuth: []
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                userId:
+                  type: string
+                  example: "64509b14478f54561502b3a7"
+                tagId:
+                  type: string
+                  example: "6450aa7caf0f84eeed688ad2"
+              required:
+                - userId
+                - tagId
+      responses:
+        "200":
+          description: A success message with deleted tag object
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  message:
+                    type: string
+                    example: "Tag deleted"
+        "400":
+          description: Invalid input parameter
+        "401":
+          description: Unauthorized access
+        "500":
+          description: Internal server error
